2005-05-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (probe_triggered):
	  Fix missing unlock.
	* gst/playback/gstplaybin.c: (add_sink):
	  First add, then link (otherwise pad link fails).

2005-05-19  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* examples/Makefile.am:
	fix buildbot (make distcheck)

2005-05-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybin.c: (gen_vis_element):
	  Remove some wrong code. Doesn't work yet.

2005-05-19  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/net/Makefile.am:
	* gst-libs/gst/net/README:
	* gst-libs/gst/net/gstnetbuffer.c: (gst_netbuffer_get_type),
	(gst_netbuffer_class_init), (gst_netbuffer_init),
	(gst_netbuffer_finalize), (gst_netbuffer_copy),
	(gst_netbuffer_new), (gst_netaddress_set_ip4_address),
	(gst_netaddress_set_ip6_address), (gst_netaddress_get_net_type),
	(gst_netaddress_get_ip4_address), (gst_netaddress_get_ip6_address):
	* gst-libs/gst/net/gstnetbuffer.h:
	Added buffer subclass to store extra to/from addresses for
	network sources/sinks.

2005-05-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst-libs/gst/gconf/gconf.c: (gst_bin_find_unconnected_pad):
	  Don't lock an unassigned variable.

2005-05-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (gen_preroll_element):
	  Increase buffer for video, decrease buffer for other media types.
	* gst/playback/gstplaybin.c: (gen_video_element),
	(gen_audio_element):
	  Change names for debugging purposes.

2005-05-18  Wim Taymans  <wim@fluendo.com>

	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_getcaps), (gst_ffmpegcsp_configure_context),
	(gst_ffmpegcsp_setcaps), (gst_ffmpegcsp_bufferalloc),
	(gst_ffmpegcsp_chain):
	Enable buffer alloc passthrough if the source and dest
	formats are the same.

2005-05-17  Wim Taymans  <wim@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_internal_chain),