@@ -1,3 +1,10 @@
+2005-05-23  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* gst/audioconvert/gstaudioconvert.c: (gst_audio_convert_init),
+	(gst_audio_convert_chain), (gst_audio_convert_link_src),
+	(gst_audio_convert_setcaps):
+	  Implement instant setup switching.
+
 2005-05-19  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* gst/playback/gstplaybasebin.c: (probe_triggered):
